# DjangoHome

./: .env.sample  auth_data.json  pyproject.toml  users_data.json
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_image_userpost_picture.py  0003_userpost_creation_date_userpost_publication_sign_and_more.py  0004_alter_userpost_creation_date.py  0005_alter_userpost_creation_date_and_more.py  0006_alter_userpost_creation_date_alter_userpost_picture.py  0007_alter_userpost_creation_date_alter_userpost_picture.py  0008_alter_userpost_creation_date.py  0009_alter_userpost_creation_date.py  0010_alter_userpost_creation_date.py
blog/templates/: base.html
blog/templates/blog/: userpost_confirm_delete.html  (+3 more)
blog/templatetags/: my_filter.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_product_manufactured_at.py  0004_remove_product_manufactured_at.py  0005_alter_product_image.py  0006_alter_product_created_at_alter_product_updated_at.py  0007_version.py  0008_product_user.py  0009_product_is_published.py  0010_alter_product_options.py
catalog/templates/: base.html  contacts.html  home.html  sample_product.html
catalog/templatetags/: my_filter.py
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_country_and_more.py
users/templates/: register.html  restore_password.html  user_authentication.html
(+9 files in other folders)
